[package]
name = "tatk"
license = "MIT"
version = "0.1.1"
edition = "2021"
description = "Technical Analysis Toolkit"
readme = "README.md"
homepage = "https://github.com/Ohkthx/tatk-rs"
repository = "https://github.com/Ohkthx/tatk-rs"
keywords = ["trading", "signal", "technical", "analysis", "ta"]
include = ["*/**/***.rs"]

[features]
default = []
full = ["test-data"]
test-data = []

[[example]]
name = "simple_moving_average"
path = "examples/simple_moving_average.rs"
required-features = ["test-data"]

[[example]]
name = "exponential_moving_average"
path = "examples/exponential_moving_average.rs"
required-features = ["test-data"]

[[example]]
name = "double_exponential_moving_average"
path = "examples/double_exponential_moving_average.rs"
required-features = ["test-data"]

[[example]]
name = "moving_average_convergence_divergence"
path = "examples/moving_average_convergence_divergence.rs"
required-features = ["test-data"]

[[example]]
name = "relative_strength_index"
path = "examples/relative_strength_index.rs"
required-features = ["test-data"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
